; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_get_handle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_get_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @tipc_get_handle(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.port*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.port* @tipc_port_lock(i32 %6)
  store %struct.port* %7, %struct.port** %4, align 8
  %8 = load %struct.port*, %struct.port** %4, align 8
  %9 = icmp ne %struct.port* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %19

11:                                               ; preds = %1
  %12 = load %struct.port*, %struct.port** %4, align 8
  %13 = getelementptr inbounds %struct.port, %struct.port* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %5, align 8
  %16 = load %struct.port*, %struct.port** %4, align 8
  %17 = call i32 @tipc_port_unlock(%struct.port* %16)
  %18 = load i8*, i8** %5, align 8
  store i8* %18, i8** %2, align 8
  br label %19

19:                                               ; preds = %11, %10
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local %struct.port* @tipc_port_lock(i32) #1

declare dso_local i32 @tipc_port_unlock(%struct.port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
